# masher

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/masher/: RobloxMesh.hpp  RobloxMeshSubset.hpp  masher.h
src/: RobloxMesh.cpp  RobloxMeshSubset.cpp  main.cpp  masher.cpp
src/cli/: main.cpp
src/lib/: RobloxMesh.cpp  masher.cpp
src/lib/include/serializers/: serializer.hpp  v1.hpp  v2.hpp  v3.hpp  v4.hpp  v5.hpp
src/lib/serializers/: v1.cpp  v2.cpp  v3.cpp  v4.cpp  v5.cpp
